| Bug #2184 | Prepared statements in embedded library was broken with recent changes | ||
|---|---|---|---|
| Submitted: | 21 Dec 2003 21:14 | Modified: | 23 Dec 2003 4:13 |
| Reporter: | Alexey Botchkov | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Embedded Library ( libmysqld ) | Severity: | S2 (Serious) |
| Version: | 4.1 | OS: | Any (All) |
| Assigned to: | Alexey Botchkov | CPU Architecture: | Any |
[21 Dec 2003 21:14]
Alexey Botchkov
[23 Dec 2003 4:13]
Alexey Botchkov
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
bk commit - 4.1 tree (hf:1.1707)
