short patch for bug #2184 'Prepared statements in embedded library was broken with recent changes' (attempt 2). Adding Statement_core is better because: - set_statement() code is shorter and you don't need to modify it when adding new members to Statement_core - a bit faster (you don't have virtual call and don't free_root() twice) Do that short patch instead in hope that set_statement() will be sooner or later removed entirely